@@ -11,4 +11,80 @@
   <artifactId>org.eclipse.mylyn.tests</artifactId>
   <version>3.5.0-SNAPSHOT</version>
   <packaging>eclipse-test-plugin</packaging>
+  <properties>
+    <mylyn-test-suite>org.eclipse.mylyn.tests.AllTests</mylyn-test-suite>
+  </properties>
+  <profiles>
+    <profile>
+      <id>heartbeat</id>
+      <properties>
+	<mylyn-test-suite>org.eclipse.mylyn.tests.AllHeartbeatTests</mylyn-test-suite>
+      </properties>
+    </profile>
+  </profiles>
+  <build>
+    <plugins>
+      <plugin>
+	<groupId>org.apache.maven.plugins</groupId>
+	<artifactId>maven-antrun-plugin</artifactId>
+	<version>1.6</version>
+	<executions>
+	  <execution>
+	    <phase>pre-integration-test</phase>
+	    <configuration>
+	      <target>
+		<echo>Initializing Test Harness</echo>
+	      </target>
+	    </configuration>
+	    <goals>
+	      <goal>run</goal>
+	    </goals>
+	  </execution>
+	</executions>
+      </plugin>
+      <plugin>
+	<groupId>org.sonatype.tycho</groupId>
+	<artifactId>maven-osgi-test-plugin</artifactId>
+	<version>${tycho-version}</version>
+	<configuration>
+	  <useUIHarness>true</useUIHarness>
+	  <forkedProcessTimeoutInSeconds>7200</forkedProcessTimeoutInSeconds>
+	  <testSuite>org.eclipse.mylyn.tests</testSuite>
+	  <testClass>${mylyn-test-suite}</testClass>
+	  <argLine>-Xmx1024m -XX:MaxPermSize=256m -Djava.io.tmpdir=${project.build.directory}</argLine>
+	</configuration>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+	<version>2.5</version>
+        <executions>
+          <execution>
+            <id>test</id>
+            <phase>test</phase>
+            <configuration>
+	      <includes>
+		<include>org/eclipse/mylyn/tests/AllHeadlessStandaloneTests.java</include>
+	      </includes>
+            </configuration>
+            <goals>
+	      <goal>test</goal>
+            </goals>
+          </execution>
+        </executions>
+      </plugin>
+      <plugin>
+        <groupId>org.sonatype.tycho</groupId>
+        <artifactId>maven-osgi-source-plugin</artifactId>
+      </plugin>
+      <plugin>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>findbugs-maven-plugin</artifactId>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-pmd-plugin</artifactId>
+      </plugin>
+    </plugins>
+  </build>
 </project>
